6984056: C1: incorrect code for integer constant addition on x64

Fix add/sub of constants to ints on x64

Reviewed-by: kvn